--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {font-family: Arial !important;}
+* {font-family: Arial;}
 /* a { text-decoration: none !important;
 } */
  a {color: #2d89ef !important;text-decoration: none !important}
